c2prj1_cards/grade.txt
Grading at Tue Jan 29 18:30:06 UTC 2019
Compiling cards.c
cards.c: In function ‘card_from_letters’:
cards.c:74:8: error: multi-character character constant [-Werror=multichar]
   case '10': temp.value = 0; break;
        ^
cards.c:74:3: error: case label value exceeds maximum value for type [-Werror]
   case '10': temp.value = 0; break;
   ^
In file included from cards.c:2:0:
cards.c:86:10: error: void value not ignored as it ought to be
   assert(assert_card_valid(temp));
          ^
cc1: all warnings being treated as errors
Could not compile your card.c!

Overall Grade: FAILED
